# cowHipHeightProject

./: CMakeLists.txt  README.md
config/: ground_plane.yaml  nyx660.yaml
launch/: cowpal_launch.py
msg/: CowInfo.msg
scripts/: calibration.py  cowDetectionModel.py  groundPlane.py  heightObtainor.py  manager.py  websiteWriter.py
